# PosteriFlow

./: .coverage  .gitignore  AGENTS.md  CHANGELOG_DISTRIBUTION_METRICS.md  COMPLETE_FIX_SUMMARY.md  CONFIG_AND_CODE_ALIGNMENT_CHECK.md  CORRELATION_FIX_SUMMARY.md  DISTANCE_BIAS_ANALYSIS_COMPLETE.md  DISTANCE_SNR_FIX_SUMMARY.md  DISTRIBUTION_METRICS_GUIDE.md  DISTRIBUTION_METRICS_IMPLEMENTATION.md  DISTRIBUTION_METRICS_QUICK_REF.md  ENHANCED_LOGGING_GUIDE.md  EXTREME_CASE_FIX_SUMMARY.md  EXTREME_CASE_INVESTIGATION_SUMMARY.md  FINAL_VERIFICATION.md  FIX_REFERENCE.md  FIX_SUMMARY.md  FLOWMATCHING_COMPLETION_REPORT.txt  FLOW_IMPROVEMENTS_README.md  FLOW_MATCHING_COMPLETION_SUMMARY.md  FLOW_MATCHING_INDEX.md  FLOW_MATCHING_QUICK_START.md  FLOW_NLL_FIX_IMPLEMENTATION_SUMMARY.md  FLOW_NLL_FIX_INDEX.md  FLOW_QUICK_REFERENCE.md  GRADIENT_EXPLOSION_DIAGNOSIS.md  GRADIENT_FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.txt  INFERENCE_EXAMPLE.md  INFERENCE_QUALITY_REPORT.md  INFERENCE_SETUP_GUIDE.md  INFERENCE_TESTING_COMPLETE.md  INFERENCE_TEST_INDEX.md  INSTANCE_NORM_FIX_DEC24.md  LICENSE  LOGGING_EXAMPLES.md  NEURAL_PE_CURRENT_STATUS.md  NEURAL_PE_FIX_INDEX.md  NEURAL_PE_README.md  (+100 more)
FIX_DOCS/: EXTREME_CASE_CATEGORIZATION_BUG.md  EXTREME_CASE_STATUS_INDICATOR_FIX.md  EXTREME_CASE_VARIANCE_ANALYSIS.md  NOISE_QUALITY_FIXES.md  PHYSICS_LOSS_RETURN_STATEMENT_FIX.md
analysis/: analysis_summary.txt  context_conditioning_test.json  noise_metrics.json  overlap_benchmark.json  report.html  snr_regime_statistics.json  twin_grid_v3.json
analysis/ablation_tier0/: probe_report.json  report.json
analysis/anchors/: summary.json
analysis/degeneracy/: summary.json
analysis/distance_pipeline/: disc_raw_crossdet.json  fix1_is_realevents.json  fix2_injrec.json  fix2b_sensitivity.json  fix4_extrinsic_probe.json  fix5_psdcond_proof.json  strat_diag.json  summary.json
analysis/divergence_localization/: _events.py  events_ep19.json  make_plots.py  run_events.py  step1_snr.json  step1_snr_audit.py  step2_mass.json  step2_mass_coverage.py  step3_trajectory.json  step3_trajectory.py  step4_ood_decomp.json  step4_ood_decomp.py  step5_snr_bins.json  step5_snr_bins.py  step6_railing.json  step6_railing_perparam.py  step7_flow_tail.json  step7_flow_tail.py
analysis/dynesty_compare/: comparison.json
analysis/enc_finetune_distance_only/: history.json
analysis/enc_finetune_multitask/: history.json
analysis/encoder_ab_compare/: history.json  progress.json  verdict.json
analysis/encoder_geometry/: report.json
analysis/encoder_layer_audit/: report.json
analysis/encoder_v2_postmortem/: postmortem.json
analysis/encoder_vs_flow/: report.json
analysis/gw150914_localization/: _common.py  audit_mcdl.json  audit_mcdl.py  encoder_amplitude_response.json  encoder_amplitude_response.py  make_figure.py  make_fixed_dataset.py  poc_coherent.py  poc_coherent_fixed.json  poc_coherent_poc.json  poc_coherent_smoke.json  poc_coherent_thru.json  step0_parity.json  step0_parity.py  step15_encoder_audit.json  step15_encoder_audit.py  step1b_stratified.json  step1b_stratified.py  step2_asdbands_ood.json  step2_asdbands_ood.py  step3_era.json  step3_era.py  step4_semireal.json  step4_semireal.py  step4b_snr_domain.py  (+8 more)
code_checks/: test_attention_features.py  test_batch_structure.py  test_config.yaml  test_config_propagation.py  test_neural_noise_integration.py  test_noise_fixes.py  test_noise_in_detector_data.py  test_real_noise_final.py  test_transformer_mf.py  test_transformer_simple.py  validate_config_audit.py  validate_fixes.py  validate_transformer_encoder.py  verify_fixes.py
configs/: data_config.yaml  data_config_bbh_fixed.yaml  data_config_fixed.yaml  data_config_premerger_supplement.yaml  enhanced_training.yaml  experiment_config.yaml  model_config.yaml  scaler_stats.yaml  smoke_test_training.yaml
data/: analysis.py
docs/: BBH_SNR_FIX_SUMMARY.md  DATASET_GENERATION_DOCUMENTATION.md  DATASET_GENERATION_GUIDE.md  DISTRIBUTION_FIX_SUMMARY.md  FIXES_APPLIED.md  FIX_5PLUS_SIGNALS.md  FIX_CLASS_IMBALANCE.md  PRIORITYNET_FIXES_APPLIED.md  QUICK_REFERENCE.md  REAL_NOISE_INTEGRATION.md  SNR_FIX_EXPLANATION.md  TEST_DISTRIBUTION_FIX.md  VERIFICATION_CHECKLIST.md  basic.md  citation.md  dataset_docs.md  need fix.md  priority_net_docs.md
examples/: example_neural_pe_with_config.py  example_universal_config.py
experiments/: analysis.py  combined_dataset_cret.py  data_generation.py  frozen_context_heads.py  parallel_dataset_generator.py  phase1_data_generation.py  phase2_priority_net.py  phase3_adaptive_subtractor.py  phase3_neural_pe.py  phase3a_flow_matching.py  phase3a_neural_pe.py  phase3b_subtractor.py  phase3b_subtractor.py.backup  phase3c_validation.py  phase4_full_pipeline.py  precompute_posterior_stats.py  real_data_test.py  real_data_test.py.param_backup  remix_data.py  test_flow_gradients.py  test_neural_pe.py  test_priority_net.py  train_bias_corrector.py  train_lean_npe.py  train_neuralpe.py  train_priority_net.py  v2_remix_data.py  verification_script.py  verification_script_enhanced.py  verification_script_final.py  verification_script_fixed.py
models/: priority_net_checkpoint.pt
notebooks/: 01_data_exploration.ipynb  02_priority_net_training.ipynb  03_overlap_neuralpe.ipynb
outputs/: overlap_neural_pe_test_results.json
scripts/: benchmark_encoder.py  benchmark_real_events.py  calibrate_priority_net.py  check_dataset.py  download_gwosc_noise.py  download_gwosc_noise_bank.py  download_gwosc_segments.py  dynesty_compare.py  lean_npe_diagnostics.py  lean_npe_extended_eval.py  overlap_benchmark.py  probe_tiers_and_amplitude.py  quick_check_event_snr.py  quick_validate_200.py  real_noise_test.py  recompute_scaler_stats.py  run_calibration_and_compare.py  twin_grid.py  validate.py  validate_checkpoint.py  validate_pipeline_physics.py
tests/: diag_sample_snr.py  test_adaptive_subtractor.py  test_bias_corrector.py  test_dataset_config_mapping.py  test_parameter_scaler_roundtrip.py  test_priority_net.py  test_ranking_loss_fix.py  test_snr_scaling.py  test_transformer_encoder_enhanced.py  test_whitening_snr.py
(+330 files in other folders)
