[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PosteriFlow"
version = "1.0.0"
description = "Adaptive Hierarchical Signal Decomposition for overlapping gravitational waves"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bibin Thomas", email = "bibinthomas951@gmail.com"}
]
maintainers = [
    {name = "Bibin Thomas", email = "bibinthomas951@gmail.com"}
]
keywords = [
    "gravitational-waves",
    "ligo",
    "parameter-estimation",
    "neural-networks",
    "overlapping-signals",
    "astrophysics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    # GW Analysis
    "pycbc>=2.3.0",
    "lalsuite>=7.3",
    
    # Data Processing
    "pandas>=2.0.0",
    "h5py>=3.8.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Utils
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.2.0",
    "astropy>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
    "isort>=5.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.20",
]
all = [
    "PosteriFlow[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/bibinthomas123/PosteriFlow"
Repository = "https://github.com/bibinthomas123/PosteriFlow"
Documentation = "https://github.com/bibinthomas123/PosteriFlow/wiki"
"Bug Tracker" = "https://github.com/bibinthomas123/PosteriFlow/issues"

[project.scripts]
ahsd-analyze = "experiments.real_data_pipeline:main"
ahsd-train = "experiments.train_neuralpe:main"
ahsd-test = "experiments.test_neuralpe:main"
ahsd-generate-data = "data_generation.generate_dataset:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
ahsd = ["*.yaml", "*.json", "configs/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # defaults
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=ahsd --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["ahsd"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
